fix(Button Icons): Alignment is slightly off
#1322

--- a/src/assets/wise5/authoringTool/importComponent/choose-import-component/choose-import-component.component.scss
+++ b/src/assets/wise5/authoringTool/importComponent/choose-import-component/choose-import-component.component.scss
@@ -12,3 +12,7 @@
 .componentHeader {
   padding: 2px;
 }
+
+.mat-icon {
+  margin: 0px;
+}
