--- a/src/assets/wise5/classroomMonitor/classroomMonitorComponents/shared/top-bar/top-bar.component.scss
+++ b/src/assets/wise5/classroomMonitor/classroomMonitorComponents/shared/top-bar/top-bar.component.scss
@@ -21,10 +21,6 @@
   margin: 0 4px;
 }
 
-.notifications-menu-button {
-  width: 40px !important;
-}
-
 /* TODO(mdc-migration): The following rule targets internal classes of list that may no longer apply for the MDC version. */
 .mat-list-item-content {
   padding: 0;
